fix layout - changement de gap vers des margins pour compatibilité Safari

--- a/style.css
+++ b/style.css
@@ -435,13 +435,11 @@ button span {
   margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
 }
 
 .card-group {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .hebergements .cards {
@@ -456,6 +454,7 @@ button span {
   padding: 5px;
   flex-direction: column;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin-bottom: 0.75rem;
 }
 
 .card:hover {
@@ -469,6 +468,13 @@ button span {
 
 .activites .card {
   padding: 0;
+  margin-bottom: 1.5rem;
+}
+
+.populaires .card:last-of-type,
+.hebergements .card:last-of-type,
+.activites .card-group:last-of-type .card:last-of-type {
+  margin-bottom: 0;
 }
 
 .hebergements .card,
@@ -551,35 +557,37 @@ button span {
 }
 
 @media screen and (min-width: 768px) {
-  .cards {
-    gap: 2rem;
-  }
-
-  .activites .cards {
-    gap: 2.5rem;
-  }
-
   .hebergements .cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 0;
+  }
+
+  .populaires .card {
+    margin-bottom: 2rem;
   }
 
   .hebergements .card {
-    min-width: 250px;
-    flex: 1;
+    width: 250px;
+    margin: 2rem auto 0;
   }
 
   .card-group {
     height: 450px;
     flex-wrap: wrap;
-    flex: 1;
-    min-width: 500px;
-    gap: 2.5rem;
+    flex: 1 100%;
+    align-content: space-between;
+    justify-content: space-between;
+  }
+
+  .card-group:first-of-type {
+    margin-bottom: 2rem;
   }
 
   .activites .card {
     max-width: calc(50% - 2.5rem / 2);
+    margin: 0;
   }
 
   .activites .card {
@@ -604,6 +612,16 @@ button span {
 
   .activites .card-content {
     max-height: 3rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-group {
+    flex: 1 calc(50% - 1.25rem);
+  }
+
+  .card-group:last-of-type {
+    margin-left: 2.5rem;
   }
 }
 
